:wrench: upgrade java to 17 and testcharm to latest