@@ -1,20 +1,17 @@
-package org.testcharm;
+package demo.testcharm;
 
-import com.github.leeonky.jfactory.cucumber.JData;
-import com.github.leeonky.jfactory.cucumber.Table;
 import io.cucumber.java.After;
 import io.cucumber.java.Before;
 import io.cucumber.java.zh_cn.假如;
 import io.cucumber.java.zh_cn.并且;
 import org.mockserver.client.MockServerClient;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.testcharm.jfactory.JFactory;
 
 import java.util.Collections;
-import java.util.List;
-import java.util.stream.Collectors;
-import java.util.stream.IntStream;
+import java.util.Map;
 
-import static com.github.leeonky.dal.Assertions.expect;
+import static org.testcharm.dal.Assertions.expect;
 
 public class MockServerSteps {
 
@@ -23,7 +20,7 @@ public class MockServerSteps {
     @Autowired
     private DALMockServer dalMockServer;
     @Autowired
-    private JData jData;
+    private JFactory jFactory;
 
     @Before(order = 0)
     public void setupMockServer() {
@@ -40,12 +37,9 @@ public class MockServerSteps {
     public void mock_api(String mock) {
         String[] requestAndResponses = mock.split("---");
 
-        List<DALMockServer.ResponseBuilder> responseBuilders = IntStream.range(1, requestAndResponses.length)
-                .mapToObj(i -> (DALMockServer.ResponseBuilder)
-                        jData.prepare("DefaultResponseBuilder", Table.create(requestAndResponses[i].trim())).get(0))
-                .collect(Collectors.toList());
+        DALMockServer.ResponseBuilder responseBuilders = jFactory.useDAL().create("DefaultResponseBuilder", requestAndResponses[1]);
 
-        dalMockServer.mock(Collections.singletonMap(requestAndResponses[0].trim(), responseBuilders));
+        dalMockServer.mock(Map.of(requestAndResponses[0].trim(), Collections.singletonList(responseBuilders)));
     }
 
     @并且("验证Mock API:")
